force-app/main/default/objects/Case/fields/FreshDesk_URL__c.field-meta.xml
<CustomField>
    <fullName>FreshDesk_URL__c</fullName>
    <formula>&apos;your Fresh desk URL&apos; +  freshDeskId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FreshDesk URL</label>
    <type>Text</type>
</CustomField>