force-app/main/default/objects/Case/fields/freshDeskId__c.field-meta.xml
<CustomField>
    <fullName>freshDeskId__c</fullName>
    <label>freshDeskId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>